Fix markdown content overflow

--- a/src/themes/shared/_app.css
+++ b/src/themes/shared/_app.css
@@ -54,6 +54,10 @@ main {
   }
 }
 
+.markdown-section {
+  overflow: hidden;
+}
+
 .github-corner {
   position: absolute;
   top: 0;
